fHomeopathy 1.0.0, 2015-10-31
------------------------
- Initial release