@@ -4,7 +4,7 @@ Description: fHomeopathy is a Fully Responsive WordPress Theme suitable for an A
 Theme URI: https://tishonator.com/product/fhomeopathy
 Author: tishonator
 Author URI: https://tishonator.com
-Version: 1.0.0
+Version: 1.0.1
 Text Domain: fhomeopathy
 Tags: green, white, light, two-columns, right-sidebar, fluid-layout, responsive-layout, custom-background, custom-colors, custom-header, custom-menu, featured-images, post-formats, sticky-post, threaded-comments, translation-ready
 License: GNU General Public License v2.0
