@@ -1,3 +1,7 @@
+fHomeopathy 1.0.1, 2015-11-13
+------------------------
+- add 404 template
+
 fHomeopathy 1.0.0, 2015-10-31
 ------------------------
 - Initial release
